--- a/index.html
+++ b/index.html
@@ -35,6 +35,32 @@
             </label>
         </header>
         <div class="space"></div>
+        <section id="type-of-product">
+            <a href="#">
+                <div class="pilyonka">
+                    <img src="img/korea.jfif" alt="img">
+                    <p>Korea</p>
+                </div>
+            </a>
+            <a href="#">
+                <div class="pilyonka">
+                    <img src="img/china.jfif" alt="img">
+                    <p>China</p>
+                </div>
+            </a>
+            <a href="#">
+                <div class="pilyonka">
+                    <img src="img/uzb.jfif" alt="img">
+                    <p>Uzbekistan</p>
+                </div>
+            </a>
+            <a href="#">
+                <div class="pilyonka">
+                    <img src="img/fl.jfif" alt="img">
+                    <p>Floral</p>
+                </div>
+            </a>
+        </section>
         <section id="products">
             <div class="product">
                 <img src="img/product1.jpg" alt="Mahsulot 1">
