--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
         <section id="type-of-product">
             <a href="#">
                 <div class="pilyonka">
+                    <img src="img/uzb.jfif" alt="img">
+                    <p>Uzbekistan</p>
+                </div>
+            </a>
+            <a href="#">
+                <div class="pilyonka">
                     <img src="img/korea.jfif" alt="img">
                     <p>Korea</p>
                 </div>
@@ -50,14 +56,14 @@
             </a>
             <a href="#">
                 <div class="pilyonka">
-                    <img src="img/uzb.jfif" alt="img">
-                    <p>Uzbekistan</p>
+                    <img src="img/fl.jfif" alt="img">
+                    <p>Floral</p>
                 </div>
             </a>
             <a href="#">
                 <div class="pilyonka">
-                    <img src="img/fl.jfif" alt="img">
-                    <p>Floral</p>
+                    <img src="img/kk.jpg" alt="img">
+                    <p>Other</p>
                 </div>
             </a>
         </section>
