--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </header>
         <div class="space"></div>
         <section id="type-of-product">
-            <a href="#">
+            <a href="#uzb">
                 <div class="pilyonka">
                     <img src="img/uzb.jfif" alt="img">
                     <p>Uzbekistan</p>
@@ -67,6 +67,7 @@
                 </div>
             </a>
         </section>
+        <h2 id="uzb">Uzbekistan</h2>
         <section id="products">
             <div class="product">
                 <img src="img/product1.jpg" alt="Mahsulot 1">
@@ -85,6 +86,15 @@
                 <input type="number" id="meter-2" placeholder="Necha metr?" min="1" value="1" onchange="updatePrice(2, 7000)">
                 <p>Jami narx: <span id="total-2">7000</span> so'm</p>
                 <button onclick="addToCart(2, 'Mahsulot 2', 7000)">Sotib olish</button>
+            </div>
+            <div class="product">
+                <img src="img/product3.jpg" alt="Mahsulot 3">
+                <h3>Mahsulot 3</h3>
+                <p>Himoyali plyonka</p>
+                <p>9000 so'm per metr</p>
+                <input type="number" id="meter-2" placeholder="Necha metr?" min="1" value="1" onchange="updatePrice(3, 9000)">
+                <p>Jami narx: <span id="total-3">9000</span> so'm</p>
+                <button onclick="addToCart(3, 'Mahsulot 3', 9000)">Sotib olish</button>
             </div>
         </section>
         
