--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
                 <h3>Mahsulot 3</h3>
                 <p>Himoyali plyonka</p>
                 <p>9000 so'm per metr</p>
-                <input type="number" id="meter-2" placeholder="Necha metr?" min="1" value="1" onchange="updatePrice(3, 9000)">
+                <input type="number" id="meter-3" placeholder="Necha metr?" min="1" value="1" onchange="updatePrice(3, 9000)">
                 <p>Jami narx: <span id="total-3">9000</span> so'm</p>
                 <button onclick="addToCart(3, 'Mahsulot 3', 9000)">Sotib olish</button>
             </div>
         </section>
         
         <section id="cart">
-            <h2>Savatcha</h2>
+            <i id="cart-icon" class='bx bx-cart'></i>
             <ul id="cart-items"></ul>
             <button id="order-btn">Buyurtma Berish</button>
         </section>
