--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <p>Uzbekistan</p>
                 </div>
             </a>
-            <a href="#">
+            <a href="#korea">
                 <div class="pilyonka">
                     <img src="img/korea.jfif" alt="img">
                     <p>Korea</p>
@@ -70,33 +70,66 @@
         <h2 id="uzb">Uzbekistan</h2>
         <section id="products">
             <div class="product">
-                <img src="img/product1.jpg" alt="Mahsulot 1">
+                <img src="img/kl.jpg" alt="Mahsulot 1">
                 <h3>Mahsulot 1</h3>
-                <p>Issiqxona plyonkasi, yuqori sifat</p>
-                <p>5000 so'm per metr</p>
+                <p class="tafsilot">Issiqxona plyonkasi, yuqori sifat</p>
                 <input type="number" id="meter-1" placeholder="Necha metr?" min="1" value="1" onchange="updatePrice(1, 5000)">
-                <p>Jami narx: <span id="total-1">5000</span> so'm</p>
+                <p class="narx"><span>5000</span> so'm har metri</p>
+                <p class="jami">Jami narx: <span id="total-1">5000</span> so'm</p>
                 <button onclick="addToCart(1, 'Mahsulot 1', 5000)">Sotib olish</button>
             </div>
             <div class="product">
-                <img src="img/product2.jpg" alt="Mahsulot 2">
+                <img src="img/kl.jpg" alt="Mahsulot 2">
                 <h3>Mahsulot 2</h3>
-                <p>UV himoyali plyonka</p>
-                <p>7000 so'm per metr</p>
+                <p class="tafsilot">UV himoyali plyonka</p>
                 <input type="number" id="meter-2" placeholder="Necha metr?" min="1" value="1" onchange="updatePrice(2, 7000)">
-                <p>Jami narx: <span id="total-2">7000</span> so'm</p>
+                <p class="narx"><span>7000</span> so'm har metri</p>
+                <p class="jami">Jami narx: <span id="total-2">7000</span> so'm</p>
                 <button onclick="addToCart(2, 'Mahsulot 2', 7000)">Sotib olish</button>
             </div>
             <div class="product">
-                <img src="img/product3.jpg" alt="Mahsulot 3">
+                <img src="img/kl.jpg" alt="Mahsulot 3">
                 <h3>Mahsulot 3</h3>
-                <p>Himoyali plyonka</p>
-                <p>9000 so'm per metr</p>
+                <p class="tafsilot">Himoyali plyonka</p>
                 <input type="number" id="meter-3" placeholder="Necha metr?" min="1" value="1" onchange="updatePrice(3, 9000)">
-                <p>Jami narx: <span id="total-3">9000</span> so'm</p>
+                <p class="narx"><span>9000</span> so'm har metri</p>
+                <p class="jami">Jami narx: <span id="total-3">9000</span> so'm</p>
                 <button onclick="addToCart(3, 'Mahsulot 3', 9000)">Sotib olish</button>
             </div>
         </section>
+
+        <h2 id="korea">Korea</h2>
+        <section id="products">
+            <div class="product">
+                <img src="img/kl.jpg" alt="Mahsulot 1">
+                <h3>Mahsulot 4</h3>
+                <p class="tafsilot">Issiqxona plyonkasi, yuqori sifat</p>
+                <input type="number" id="meter-4" placeholder="Necha metr?" min="1" value="1" onchange="updatePrice(4, 4000)">
+                <p class="narx"><span>4000</span> so'm har metri</p>
+                <p class="jami">Jami narx: <span id="total-4">4000</span> so'm</p>
+                <button onclick="addToCart(4, 'Mahsulot 4', 4000)">Sotib olish</button>
+            </div>
+            <div class="product">
+                <img src="img/kl.jpg" alt="Mahsulot 5">
+                <h3>Mahsulot 5</h3>
+                <p class="tafsilot">UV himoyali plyonka</p>
+                <input type="number" id="meter-5" placeholder="Necha metr?" min="1" value="1" onchange="updatePrice(5, 5000)">
+                <p class="narx"><span>5000</span> so'm har metri</p>
+                <p class="jami">Jami narx: <span id="total-5">5000</span> so'm</p>
+                <button onclick="addToCart(5, 'Mahsulot 5', 5000)">Sotib olish</button>
+            </div>
+            <div class="product">
+                <img src="img/kl.jpg" alt="Mahsulot 6">
+                <h3>Mahsulot 6</h3>
+                <p class="tafsilot">Himoyali plyonka</p>
+                <input type="number" id="meter-6" placeholder="Necha metr?" min="1" value="1" onchange="updatePrice(6, 8000)">
+                <p class="narx"><span>8000</span> so'm har metri</p>
+                <p class="jami">Jami narx: <span id="total-6">8000</span> so'm</p>
+                <button onclick="addToCart(6, 'Mahsulot 6', 8000)">Sotib olish</button>
+            </div>
+        </section>
+
+        <div class="space2"></div>
         
         <section id="cart">
             <i id="cart-icon" class='bx bx-cart'></i>
