--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <label for="search-box">
                 <i id="search-icon" class='bx bx-search'></i>
             </label>
+            <a class="admin" href="admin.html">A</a>
         </header>
         <div class="space"></div>
         <section id="type-of-product">
